KW-389/feat: 빌딩 이름 반환하는 gRPC 구현 (#25)